[package]
name = "erlang_rt"
version = "0.1.0"
authors = ["Dmytro Lytovchenko"]
edition = "2018"

# Add "trace_opcode_execution" to print every opcode
# Add "trace_register_changes" to print every register change as we go
[features]
default = ["r20", "trace_opcode_execution", "trace_register_changes"]
r20 = []
trace_opcode_execution = []
trace_register_changes = []


[dependencies]
bit_field = "0.7.0"
bytes = "0.4.5"
clippy = {version = "*", optional = true}
compress = "0.1.2"
lazy_static = "0.2"
num = "0.1.40"
colored = "1.6" # console colors (TTY systems)

[profile.dev]
panic = "unwind"

[profile.release]
lto = true
panic = 'abort'
