[package]
name = "erlangrt"
version = "0.1.0"
authors = ["Dmytro Lytovchenko"]
edition = "2018"

# Add "trace_opcode_execution" to print every opcode
# Add "trace_register_changes" to print every register change as we go
# Add "fancy_string_quotes" to use unicode ‹quotes› for strings and disable
#    backslash \quoting of "quotation" characters. This breaks compatibility of printed
#    Erlang terms and the compiler won't accept them back but is beneficial for
#    reading strings with quotes such as JSON.
# Add "trace_comparisons" to log failed comparisons with args involved
# Add "trace_calls" to see native and BEAM function calls logged
[features]
default = [
    "r22",
    "fancy_string_quotes",
    "trace_opcode_execution",
    "trace_register_changes",
    "trace_stack_changes",
#    "trace_comparisons",
#   "trace_calls",
]
r22 = []
trace_opcode_execution = []
trace_register_changes = []
trace_stack_changes = []
trace_comparisons = []
trace_calls = []
fancy_string_quotes = []

[dependencies]
bit_field = "0.7.0"
bytes = "0.4.5"
clippy = {version = "*", optional = true}
compress = "0.1.2"
lazy_static = "0.2"
num = "0.1.40"
colored = "1.6" # console colors (TTY systems)
paste = "0.1"

[profile.dev]
panic = "unwind"

[profile.release]
lto = true
panic = 'abort'
